Add biased locking disabled analysis.